@@ -4,7 +4,7 @@
 #
 # Automake input file.
 #
-# Copyright (C) 2004, 2005, 2006, 2007, 2008 Stefan Jahn <stefan@lkcc.org>
+# Copyright (C) 2004-2009 Stefan Jahn <stefan@lkcc.org>
 #
 # This is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
 
 SUBDIRS = en es fr de ru uk cs pt
 
-dist_man_MANS = qucs.1 qucsdigi.1 qucsveri.1
+dist_man_MANS = qucs.1 qucsdigi.1 qucsveri.1 qucsdigilib.1
 
 CLEANFILES = *~
 MAINTAINERCLEANFILES = Makefile.in
