@@ -1,0 +1,49 @@
+.TH QucsDigiLib "1" "October 2009" "Debian/GNU Linux" "User Commands"
+.SH NAME
+QucsDigiLib \- A wrapper script for digital modules and libraries.
+.SH SYNOPSIS
+.B qucsdigilib
+[\fIOPTION\fR] \fIinfile\fR \fIoutfile\fR \fIdir\fR
+.SH DESCRIPTION
+
+\fBQucs\fR is an integrated circuit simulator which means you are able
+to setup a circuit with a graphical user interface (GUI) and simulate
+the large-signal, small-signal and noise behaviour of the circuit.
+After that simulation has finished you can view the simulation results
+on a presentation page or window.
+
+The software aims to support all kinds of circuit simulation types,
+e.g. DC, AC, S-parameter, harmonic balance analysis, noise analysis,
+etc.
+
+\fBQucsDigiLib\fR is a wrapper script for digital modules and
+libraries created by Qucs.  The program utilizes the \fBFreeHDL\fR
+compiler in order to convert the VHDL output of Qucs into a C++ file.
+Thereafter this C++ source is compiled to a binary.  The binary is
+then copied into the VHDL directory.
+
+.SH OPTIONS
+.TP
+\fR INFILE
+the filename of the VHDL file to be simulated located in the
+directory specified in \fIDIR\fR
+.TP
+\fR OUTFILE
+the filename of the binary compiled file to be produced
+.TP
+\fR DIR
+the name of the directory where the compilation is going to be performed
+.SH AVAILABILITY
+The latest version of Qucs can always be obtained from
+\fBwww.sourceforge.net\fR or \fBwww.freshmeat.net\fR
+.SH "REPORTING BUGS"
+Known bugs are documented within the BUGS file.  Report bugs to
+<qucs-bugs@lists.sourceforge.net>.
+.SH COPYRIGHT
+Copyright \(co 2005 Michael Margraf <michael.margraf@alumni.tu-berlin.de>
+.PP
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+.SH AUTHORS
+Written by Michael Margraf <michael.margraf@alumni.tu-berlin.de> and
+Stefan Jahn <stefan@lkcc.org>.
