@@ -25,7 +25,7 @@
 SUBDIRS = bitmaps components diagrams paintings dialogs
 
 if COND_WIN32
-bin_SCRIPTS = qucsdigi.bat qucsveri.bat
+bin_SCRIPTS = qucsdigi.bat qucsveri.bat qucsdigilib.bat
 else
 bin_SCRIPTS = qucsdigi qucsveri qucsdigilib
 endif
@@ -96,7 +96,7 @@ langdatadir = ${prefix}/share/qucs/lang
 langdata_DATA = $(TRANSFILES)
 
 EXTRA_DIST = $(TRANSLATIONS) $(GENTRANSLATIONS) README.translations \
-	qucsdigi qucsdigilib qucsdigi.bat qucsveri qucsveri.bat
+	qucsdigi qucsdigilib qucsdigi.bat qucsdigilib.bat qucsveri qucsveri.bat
 
 all-local: $(TRANSLATIONS) $(TRANSFILES)
 
