@@ -1,0 +1,67 @@
+#! /bin/sh
+#
+# qucsdigilib - wrapper script for digital modules and libraries
+#
+# Copyright (C) 2009 Stefan Jahn <stefan@lkcc.org>
+#
+# This is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+# 
+# This software is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this package; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
+# Boston, MA 02110-1301, USA.  
+#
+
+# Bail out on any error
+set -e
+
+# catch termination signal and kill all child processes
+#trap 'kill 0; exit 0' SIGTERM
+
+if [ "$#" != 3 ]; then
+    echo "Usage: $0 <netlist.txt> <output.o> <directory>"
+    echo "Directory has to contain the file 'netlist.txt'."
+    exit 1
+fi
+
+NAME=$1
+NAMEOUT=$2
+DIR=$3
+
+if [ ! -d "$DIR" ]; then
+    echo "$DIR: Not a directory"
+    exit 1
+fi
+
+cd $DIR
+
+if [ ! -f $NAME ]; then
+    echo "$NAME: No such file"
+    exit 1
+fi
+
+CXX=`freehdl-config --cxx`
+CXXFLAGS=`freehdl-config --cxxflags`
+
+cp $NAME digi.vhdl
+NAME="digi"
+
+echo -n "running C++ conversion..."
+freehdl-v2cc -o $NAME.cc $NAME.vhdl
+echo " done."
+
+echo -n "compiling functions..."
+$CXX $CXXFLAGS -c $NAME.cc
+echo " done."
+
+echo -n "copying module to VHDL directory..."
+cp $NAME.o $NAMEOUT
+echo " done."
